# Ethon

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  format.sh
cmake/: Findp4est.cmake
doc/: .gitignore  apj-jour.bib  apj.bst  notes.bib  notes.tex
src/: CMakeLists.txt  hdf5_helper.hpp  hllc.hpp  ideal_gas_eos.hpp  slopes.hpp  state.hpp
src/block_mesh/: amr.hpp  amr_driver.hpp  amr_mesh_info.hpp  block.hpp  block_array.hpp  block_pool.hpp  driver.hpp  face.hpp  output.hpp
src/kokkos_cuda/: amr.hpp  amr_driver.hpp  amr_mesh_info.hpp  block.hpp  block_pool.hpp  face.hpp  output.hpp
src/kokkos_omp/: amr.hpp  amr_driver.hpp  amr_mesh_info.hpp  block.hpp  block_pool.hpp  face.hpp  output.hpp
src/uniform_mesh/: boundary.hpp  godunov_1d.hpp  godunov_3d.hpp  hydro_1d.hpp  hydro_3d.hpp  muscl_1d.hpp  muscl_3d.hpp  uniform_mesh.hpp
test/: CMakeLists.txt  block_pool.cpp  convergence.cpp  convergence.hpp  regression.hpp  test_utils.cpp  test_utils.hpp
test/1d/: sedov_1d.cpp  toro_1d.cpp
test/1d/sedov_files/: athena_sedov_1600  athena_sedov_200  athena_sedov_3200  athena_sedov_400  athena_sedov_800  godunov_1600.gold  godunov_200.gold  godunov_3200.gold  godunov_400.gold  godunov_800.gold  muscl_HLLC_MC_1600.gold  muscl_HLLC_MC_200.gold  muscl_HLLC_MC_3200.gold  muscl_HLLC_MC_400.gold  muscl_HLLC_MC_800.gold  muscl_HLLC_SuperBee_1600.gold  muscl_HLLC_SuperBee_200.gold  muscl_HLLC_SuperBee_3200.gold  muscl_HLLC_SuperBee_400.gold  muscl_HLLC_SuperBee_800.gold  timmes_sedov_100  timmes_sedov_1600  timmes_sedov_200  timmes_sedov_400  timmes_sedov_800
test/1d/toro_files/: godunov_toro_1_100.gold  godunov_toro_1_1600.gold  godunov_toro_1_200.gold  godunov_toro_1_3200.gold  godunov_toro_1_400.gold  godunov_toro_1_800.gold  godunov_toro_2_100.gold  godunov_toro_2_1600.gold  godunov_toro_2_200.gold  godunov_toro_2_3200.gold  godunov_toro_2_400.gold  godunov_toro_2_800.gold  godunov_toro_3_100.gold  godunov_toro_3_1600.gold  godunov_toro_3_200.gold  godunov_toro_3_3200.gold  godunov_toro_3_400.gold  godunov_toro_3_800.gold  godunov_toro_4_100.gold  godunov_toro_4_1600.gold  godunov_toro_4_200.gold  godunov_toro_4_3200.gold  godunov_toro_4_400.gold  godunov_toro_4_800.gold  godunov_toro_5_100.gold  godunov_toro_5_1600.gold  godunov_toro_5_200.gold  godunov_toro_5_3200.gold  godunov_toro_5_400.gold  godunov_toro_5_800.gold  muscl_toro_1_100.gold  muscl_toro_1_1600.gold  muscl_toro_1_200.gold  muscl_toro_1_3200.gold  muscl_toro_1_400.gold  muscl_toro_1_800.gold  muscl_toro_2_100.gold  muscl_toro_2_1600.gold  muscl_toro_2_200.gold  muscl_toro_2_3200.gold  (+50 more)
test/3d/: amr.cpp  kelvin-helmholtz.cpp  kokkos_cuda.cpp  kokkos_omp.cpp  sedov_3d.cpp  sod_3d.cpp
test/3d/sod_files/: godunov_sod_3d_x.gold  godunov_sod_3d_y.gold  godunov_sod_3d_z.gold  muscl_MC_sod_3d_x.gold  muscl_MC_sod_3d_y.gold  muscl_MC_sod_3d_z.gold  muscl_SB_sod_3d_x.gold  muscl_SB_sod_3d_y.gold  muscl_SB_sod_3d_z.gold  sod_athena_1d
